# youtube_archive

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytype.cfg
.github/workflows/: ci.yml
tests/: test_cli.py  test_streamer.py  test_watch.py
youtube_dump/: cli.py  streamer.py  watcher.py  youtube_api.py
youtube_dump.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
